--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,16 +1,4 @@
 {
   "extends": ["react-app", "react-app/jest"],
-  "rules": {
-    "no-console": "warn",
-    "sort-imports": [
-      "error",
-      {
-        "ignoreCase": false,
-        "ignoreDeclarationSort": false,
-        "ignoreMemberSort": false,
-        "memberSyntaxSortOrder": ["none", "all", "multiple", "single"],
-        "allowSeparatedGroups": false
-      }
-    ]
-  }
+  "plugins": ["react", "simple-import-sort"]
 }
