--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "server": "npm run dev --prefix server",
     "client": "npm run start --prefix client",
-    "start": "concurrently \"npm run server\" \"npm run client\""
+    "serverInstall": "npm install --prefix server",
+    "clientInstall": "npm install --prefix client",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "install": "concurrently \"npm run serverInstall\" \"npm run clientInstall\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "client": "^0.0.1",
     "concurrently": "^7.6.0"
   }
 }
